LiskovsSubstitutionPrinciple/src/com/zak/lsp/example/bad/two/Graph3D.java
package com.zak.lsp.example.bad.two;

public class Graph3D extends Graph2D{
	
	
	public void draw(int x,int y,int z){
		System.out.println("Drawing 3D graph at "+x+","+y+","+z);
	}
}
